syntax = "proto3";
package valueproto;

service ValueStore {
    rpc Write(WriteRequest) returns (WriteResponse) {}
    rpc Lookup(LookupRequest) returns (LookupResponse) {}
    rpc Read(ReadRequest) returns (ReadResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message EmptyMsg {}

message WriteRequest {
    uint64 keyA = 1;
    uint64 keyB = 2;
    bytes  value = 3;
    int64  tsm = 4;
}

message LookupRequest {
    uint64 keyA = 1;
    uint64 keyB = 2;
    int64  tsm = 3;
}

message ReadRequest {
    uint64 keyA = 1;
    uint64 keyB = 2;
    int64  tsm = 3;
}

message DeleteRequest {
    uint64 keyA = 1;
    uint64 keyB = 2;
    int64  tsm = 3;
}

message WriteResponse {
    int64  tsm = 1;
    string err = 2;
}

message LookupResponse {
    int64  tsm = 1;
    uint32 length = 2;
    string err = 3;
}

message ReadResponse {
    int64  tsm = 1;
    bytes  value = 2;
    string err = 3;
}

message DeleteResponse {
    int64  tsm = 1;
    string err = 2;
}
