syntax = "proto3";

package proto;

service FileInterface {
    rpc GetAttr(FileRequest) returns (FileAttr)     {}
    rpc SetAttr(FileAttr) returns (FileAttr) {}
    rpc Read(FileRequest) returns (File) {}
    rpc Write(File) returns (WriteResponse) {}
}

message FileRequest {
    string fpath = 1;
}

// fields are optional by default in proto3, so clients don't have
// to send all fields when performing a attr update for example.
message FileAttr {
    string parent = 1;
    string name = 2;
    string mode = 3;
    uint64 size = 4;
    int64 mtime = 5;
}

message File {
    string name = 1;
    bytes payload = 2;
}

message WriteResponse {
    int32 status = 1;
}

service DirInterface {
    rpc Create(DirEnt) returns (WriteResponse) {}
    rpc Remove(DirEnt) returns (WriteResponse) {}
    rpc Lookup(DirRequest) returns (DirEnt) {}
    rpc ReadDirAll(DirRequest) returns (DirEntries) {}
}

message DirRequest {
    string name = 1;
}

message DirEntries {
    repeated DirEnt Entries = 1;
}

message DirEnt {
    string name = 1;
    string type = 2;
    DirAttr attr = 3;
}

message DirAttr {
    string name = 1;
    string mode = 2;
}
